<resources>
    <string name="app_name">ShopApp</string>
    <string name="str_des_local">月光小区</string>
    <string name="str_login">登陆</string>
    <string name="str_local_addr">重庆</string>
    <string name="str_bottom_shop">商城</string>
    <string name="str_bottom_pro">物业</string>
    <string name="str_bottom_oa">OA</string>
    <string name="str_bottom_house">房屋出租</string>
    <string name="str_bottom_person">个人中心</string>
    <string name="str_oa_stock">采购</string>
    <string name="str_oa_reimburse">报销</string>
    <string name="str_oa_person">人事管理</string>
    <string name="str_house_lease">出租</string>
    <string name="str_house_sale">出售</string>
    <string name="str_house_second">二手置业</string>
    <string name="str_person_zh">我的账号</string>
    <string name="str_person_mm">我的密码</string>
    <string name="str_person_ts">我的投书</string>
    <string name="str_person_bx">我的保修</string>
    <string name="str_person_wyf">我的物业费</string>
    <string name="str_person_cjcs">迟交次数</string>
    <string name="str_person_zhqy">住房权益</string>
    <string name="str_pro_bx">报修</string>
    <string name="str_pro_tsjy">投诉建议</string>
    <string name="str_pro_jf">缴费</string>
    <string name="str_pro_xqgg">小区公告</string>
    <string name="str_pro_llhd">邻里互动</string>
    <string name="title_activity_pro_bx">报修</string>
    <string name="str_pro_yjdh">应急电话</string>
    <string name="str_pro_bxlx">保修类型</string>
    <string name="str_pro_bx_lx_zmss_a">照明设施</string>
    <string name="str_pro_bx_lx_wxjjxm">维修基金项目</string>
    <string name="str_pro_bx_lx_dtwh">电梯维护</string>
    <string name="str_pro_bx_lx_gdss">管道设施</string>
    <string name="str_pro_bx_lx_qt">其他</string>
    <string name="str_oa_pur_order">清单</string>
    <string name="str_oa_pur_splc">审批流程</string>
    <string name="str_oa_pur_storage">入库</string>
    <string name="str_oa_pur_out">出库</string>
    <string name="str_oa_purchase">采购</string>
    <string name="str_oa_pur_splc_xmjl">项目经理</string>
    <string name="str_oa_pur_splc_zjb">总经办</string>
    <string name="str_oa_pur_splc_zjl">总经理</string>
    <string name="str_oa_pur_splc_dsz">董事长</string>
    <string name="str_oa_pur_splc_kj">会计</string>
    <string name="str_oa_baoxiao_title">报销</string>
    <string name="str_oa_baoxiao_type">类型</string>
    <string name="str_oa_bx_sdf">水电费</string>
    <string name="str_oa_bx_cf">车费</string>
    <string name="str_oa_bx_other">其他</string>
    <string name="str_oa_rs_title">人事管理</string>
    <string name="str_oa_rs_rsda">人事档案</string>
    <string name="str_oa_rs_txl">通讯录</string>
    <string name="str_oa_rs_lc">流程</string>
    <string name="str_oa_rs_ct">辞退</string>
    <string name="str_oa_rs_lz">离职</string>
    <string name="str_oa_rs_lzsq">离职申请</string>
    <string name="str_oa_rs_lzcx">离职查询</string>
    <string name="str_oa_rs_rslc">人事流程</string>
    <string name="str_oa_rs_lxr">联系人</string>
    <string name="property_management">物业管理</string>
    <string name="search_hint">搜索邻居昵称/手机号查找</string>
    <string-array name="ps_select">
        <item>从相册选择</item>
        <item>拍照</item>
    </string-array>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">Send</string>
    <string name="attach_smile">Emoticon</string>
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_location">Location</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="user_card">Business card</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="release_to_cancel">Finger release to cancel sending</string>
    <string name="send_fail">Send failed</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_conversation_messages">Delete conversation and messages</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="copy_message">Copy message</string>
    <string name="delete_voice">Delete voice</string>
    <string name="delete_video">Delete video</string>
    <string name="delete">Delete</string>
    <string name="resend">Resend</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="network_unavailable">The network connection is not available, please check the network</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="button_logout">Logout</string>
    <string name="button_uploadlog">Upload the log</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="prompt">Prompt</string>
    <string name="clear_records">Clear conversation?</string>
    <string name="clear_all_records">Clear all conversations？</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="location_message">The location information</string>
    <string name="recording_video">Record video</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">Voice</string>
    <string name="picture">[Picture]</string>
    <string name="video">[Video]</string>
    <string name="file">[file]</string>
    <string name="dynamic_expression">[Dynamic expression]</string>
    <string name="voice_prefix">[Voice]</string>
    <string name="voice_call">[Voice call]</string>
    <string name="video_call">[Video call]</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_search">Find</string>
    <string name="button_add">Add</string>
    <string name="search_header">Search</string>
    <string name="network_isnot_available">The network is not available</string>
    <string name="recoding_fail">The recording failure, please try again！</string>
    <string name="select_contacts">Select the contact</string>
    <string name="confirm_forward_to">Confirm to forward to：%1$s ?</string>
    <string name="logout">Logout</string>
    <string name="logout_hint">Logout will never clear the chat history, this account can be used on next login</string>
    <string name="exit_group_hint">The group messages will not be received after exiting the group</string>
    <string name="dissolution_group_hint">The group will be dismissed after exiting</string>
    <string name="exit_group">Exit</string>
    <string name="connect_conflict">The same account was loggedin in other device</string>
    <string name="ease_user_remove">This user has been removed</string>
    <string name="set">Settings</string>
    <string name="notify">New message notification</string>
    <string name="newnotify">Receiving a new message</string>
    <string name="shake">Shake</string>
    <string name="chatset">Chat settings</string>
    <string name="yangshengqi">Use speaker</string>
    <string name="book_black">Black list</string>
    <string name="session">Conversation</string>
    <string name="address_book">Address book</string>
    <string name="setting">Settings</string>
    <string name="now_refresh_list">Refreshing contact list</string>
    <string name="Application_and_notify">Invitation and notification</string>
    <string name="save_new_nickname">Save new nickname</string>
    <string name="group_chat">Group chat</string>
    <string name="add_friend">Add friends</string>
    <string name="search">Search</string>
    <string name="black_item">Black list</string>
    <string name="diagnose">Diagnose</string>
    <string name="push_nick">IOS offline push nick</string>
    <string name="Current_version">Current version</string>
    <string name="Not_Set">Not set</string>
    <string name="Upload_the_log">Uploading the log</string>
    <string name="The_new_group_chat">Create new group</string>
    <string name="group_name">Group name</string>
    <string name="Group_chat_profile">Group profile</string>
    <string name="Whether_the_public">Is public</string>
    <string name="Open_group_members_invited">Allow members to invite</string>
    <string name="Open_group_chat">Public group</string>
    <string name="blacklist">Black list</string>
    <string name="Empty_the_chat_record">Clear conversation</string>
    <string name="Shielding_of_the_message">Block message</string>
    <string name="Select_the_contact">Select the contact</string>
    <string name="Group_chat_information">The group description</string>
    <string name="Group_of_Lord">The group owner</string>
    <string name="Introduction">Brief</string>
    <string name="To_join_the_chat">Join the group</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="downwaiting">Downloading the file, please try again later</string>
    <string name="mute">Mute</string>
    <string name="Hands_free">Hands free</string>
    <string name="hang_up">Hang up</string>
    <string name="answer">Answer</string>
    <string name="unable_to_connect">Unable to connect to the server</string>
    <string name="newchat">Create new group</string>
    <string name="agree">Agree</string>
    <string name="Group_chat">Group chat</string>
    <string name="chat_room">Chat room</string>
    <string name="not_download">Did not download:</string>
    <string name="is_down_please_wait">Downloading video, please try again later</string>
    <string name="Exit_the_group_chat">Exit the group</string>
    <string name="Please_enter_a_username">Please enter a username</string>
    <string name="not_add_myself">"Can't add myself"</string>
    <string name="This_user_is_already_your_friend">This user is already your friend</string>
    <string name="Add_a_friend">Let me to be your friend!</string>
    <string name="send_successful">Request was sent, waiting for the peer to accept</string>
    <string name="Request_add_buddy_failure">Request add buddy failure:</string>
    <string name="Network_error">Network error</string>
    <string name="Making_sure_your_location">Making sure your location..</string>
    <string name="please_check">key validation error!Please on AndroidManifest.xml file check the key set</string>
    <string name="expression">[expression]</string>
    <string name="Removed_from_the_failure">Removed fail</string>
    <string name="be_removing">Be removing</string>
    <string name="call_duration">call duration</string>
    <string name="Refused">Refused</string>
    <string name="The_other_party_has_refused_to">Call was refused</string>
    <string name="The_other_is_not_online">The peer is not online</string>
    <string name="The_other_is_on_the_phone">The peer is on the phone</string>
    <string name="The_other_party_did_not_answer">The peer did not answer</string>
    <string name="did_not_answer">did not answer</string>
    <string name="Has_been_cancelled">Cancelled</string>
    <string name="unable_to_get_loaction">Unable to get to your location information!</string>
    <string name="not_connect_to_server">Not connect to server, please try again later</string>
    <string name="sd_card_does_not_exist">"SD card does not exist, can't take pictures"</string>
    <string name="cant_find_pictures">"Can't find pictures"</string>
    <string name="File_does_not_exist">File does not exist</string>
    <string name="The_file_is_not_greater_than_10_m">The file is not greater than 10 m</string>
</resources>