<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/oa_pur_splc_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    android:padding="@dimen/margin_10">

    <TextView
        android:id="@+id/tv_oa_pur_splc_xmjl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/oa_item_title_color"
        android:drawableLeft="@mipmap/icon_oa_pur_splc_xmjl"
        android:drawablePadding="@dimen/margin_20"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_20"
        android:text="@string/str_oa_pur_splc_xmjl"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_oa_pur_splc_zjb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_weight="1.0"
        android:background="@color/oa_item_title_color"
        android:drawableLeft="@mipmap/icon_oa_pur_splc_zjb"
        android:drawablePadding="@dimen/margin_20"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_20"
        android:text="@string/str_oa_pur_splc_zjb"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_oa_pur_splc_zjl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_weight="1.0"
        android:background="@color/oa_item_title_color"
        android:drawableLeft="@mipmap/icon_oa_pur_splc_zjl"
        android:drawablePadding="@dimen/margin_20"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_20"
        android:text="@string/str_oa_pur_splc_zjl"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_oa_pur_splc_dsz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_weight="1.0"
        android:background="@color/oa_item_title_color"
        android:drawableLeft="@mipmap/icon_oa_pur_splc_dsz"
        android:drawablePadding="@dimen/margin_20"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_20"
        android:text="@string/str_oa_pur_splc_dsz"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_oa_pur_splc_kj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_weight="1.0"
        android:background="@color/oa_item_title_color"
        android:drawableLeft="@mipmap/icon_oa_pur_splc_kj"
        android:drawablePadding="@dimen/margin_20"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_20"
        android:text="@string/str_oa_pur_splc_kj"
        android:textAppearance="?android:attr/textAppearanceLarge" />


</LinearLayout>