<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/pro_bx_bg">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:layout_height="@dimen/margin_60">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/pro_bx_back"
            android:scaleType="center"
            android:padding="@dimen/margin_10"
            android:id="@+id/iv_pro_bx_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:layout_marginRight="@dimen/margin_20"
            android:gravity="center"
            android:textColor="@color/color_title_font"
            android:textSize="@dimen/font_size_20"
            android:text="@string/str_pro_bx"
            android:textStyle="bold"
            android:id="@+id/textView2" />
    </LinearLayout>


    <RadioGroup
        android:id="@+id/rg_bx_checked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/range_bg"
        android:padding="@dimen/margin_5"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_pro_bxlx"
            android:layout_marginRight="@dimen/margin_5"
            android:button="@null"
            android:paddingTop="@dimen/margin_5"
            android:paddingLeft="@dimen/margin_20"
            android:paddingBottom="@dimen/margin_5"
            android:paddingRight="@dimen/margin_20"
            android:background="@drawable/range_left_selector"
            android:id="@+id/rb_pro_bx_lx"
            android:layout_gravity="center_horizontal"
            android:textColor="@drawable/range_txt_selector"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_pro_yjdh"
            android:id="@+id/rb_pro_bx_dh"
            android:button="@null"
            android:paddingTop="@dimen/margin_5"
            android:paddingLeft="@dimen/margin_20"
            android:paddingBottom="@dimen/margin_5"
            android:paddingRight="@dimen/margin_20"
            android:background="@drawable/range_right_selector"
            android:layout_gravity="center_horizontal"
            android:textColor="@drawable/range_txt_selector" />
    </RadioGroup>

    <include layout="@layout/pro_bx_lx"
             android:id="@+id/ddddddddddddddd"/>
    <include layout="@layout/pro_bx_dh"/>

</LinearLayout>