<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fbfefc"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ec6a59" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout">


            <ImageView
                android:layout_width="@dimen/margin_70"
                android:layout_height="@dimen/margin_70"
                android:id="@+id/iv_person_ico"
                android:background="@mipmap/img_person_def"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="范冰冰"
                android:id="@+id/textView"
                android:gravity="center"
                android:textSize="@dimen/font_size_16"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/ll_person_zh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_person_zh"
                android:layout_width="@dimen/margin_60"
                android:layout_height="@dimen/margin_60"
                android:background="@mipmap/icon_person_zh" />

            <TextView
                android:id="@+id/tv_person_zh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/str_person_zh"
                android:textSize="@dimen/font_size_14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_person_mm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_person_mm"
                android:layout_width="@dimen/margin_60"
                android:layout_height="@dimen/margin_60"
                android:background="@mipmap/icon_person_mm" />

            <TextView
                android:id="@+id/tv_person_mm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/str_person_mm"
                android:textSize="@dimen/font_size_14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_person_ts"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_person_ts"
                android:layout_width="@dimen/margin_60"
                android:layout_height="@dimen/margin_60"
                android:background="@mipmap/icon_person_ts" />

            <TextView
                android:id="@+id/tv_person_ts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/str_person_ts"
                android:textSize="@dimen/font_size_14" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_person_bx"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_person_bx"
                android:layout_width="@dimen/margin_60"
                android:layout_height="@dimen/margin_60"
                android:background="@mipmap/icon_person_bx" />

            <TextView
                android:id="@+id/tv_person_bx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/str_person_bx"
                android:textSize="@dimen/font_size_14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_person_wyf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_person_wyf"
                android:layout_width="@dimen/margin_60"
                android:layout_height="@dimen/margin_60"
                android:background="@mipmap/icon_person_wyf" />

            <TextView
                android:id="@+id/tv_person_wyf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/str_person_wyf"
                android:textSize="@dimen/font_size_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_person_tccs"
                android:layout_width="@dimen/margin_60"
                android:layout_height="@dimen/margin_60"
                android:background="@mipmap/icon_person_tccs" />

            <TextView
                android:id="@+id/tv_person_tccs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/str_person_cjcs"
                android:textSize="@dimen/font_size_14" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"

        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_person_zhqy"
                android:layout_width="@dimen/margin_60"
                android:layout_height="@dimen/margin_60"
                android:background="@mipmap/icon_person_zhqy" />

            <TextView
                android:id="@+id/tv_person_zhqy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/str_person_zhqy"
                android:textSize="@dimen/font_size_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

